# UML-NOW-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  umlnow.sh
tests/: test_course.py  test_search_courses.py
umlnow/: __main__.py  api.py  course.py  data.py  search.py
