[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umlnow"
version = "1.0.0"
description = "A Command Line Interface for the University of Massachusetts Lowell's NOW Student Dashboard API."
readme = "README.md"
authors = [{ name = "Martin Marwad", email = "Martin_Marwad@cs.uml.edu" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fire @git+https://github.com/google/python-fire.git",
    "bs4",
    "playwright",
]
requires-python = ">=3"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MartinMarwad/UML-NOW-CLI"

[project.scripts]
realpython = "umlnow.__main__:main"